# ChangeLog for gnome-extra/gnome-media
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.170 2008/05/27 03:48:08 jer Exp $

  27 May 2008; Jeroen Roovers <jer@gentoo.org> gnome-media-2.22.0.ebuild:
  Marked ~hppa (bug #218794).

  14 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-media-2.22.0.ebuild:
  add optional gst-plugins-cdio/cdparanoia dependency, bug #188535.

  08 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-media-2.22.0.ebuild:
  add addpredict back, fix bug #220983

  08 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-media-2.18.0.ebuild, -gnome-media-2.18.0-r1.ebuild,
  gnome-media-2.22.0.ebuild:
  make gnomecd optional, bug #200502.
  clean up old revisions.

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> gnome-media-2.22.0.ebuild:
  Added ~ppc64; bug #218794

  22 Apr 2008; Raúl Porcel <armin76@gentoo.org> gnome-media-2.22.0.ebuild:
  Add ~alpha/~ia64/~sparc wrt #218794

  27 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-media-2.22.0.ebuild:
  drop most keywords because of gst-plugins-meta dependency

*gnome-media-2.22.0 (26 Mar 2008)

  26 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-media-2.22.0.ebuild:
  New version for GNOME-2.22. Minor bug fixes.

  18 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-media-2.20.1.ebuild:
  fix LINGUAS handling, bug #183086

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> gnome-media-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> gnome-media-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> gnome-media-2.20.1.ebuild:
  Marking gnome-media-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> gnome-media-2.20.1.ebuild:
  alpha/ia64/sparc stable wrt #199740
