@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/swfdec-gnome
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/swfdec-gnome/ChangeLog,v 1.8 2008/05/27 03:30:45 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/swfdec-gnome/ChangeLog,v 1.9 2008/06/01 11:10:14 nixnut Exp $
+
+  01 Jun 2008; nixnut <nixnut@gentoo.org> swfdec-gnome-2.22.2.ebuild:
+  Added ~ppc wrt bug 218794
 
   27 May 2008; Jeroen Roovers <jer@gentoo.org> swfdec-gnome-2.22.2.ebuild:
   Marked ~hppa (bug #218794).
