@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-media
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.170 2008/05/27 03:48:08 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.171 2008/06/01 11:14:42 nixnut Exp $
+
+  01 Jun 2008; nixnut <nixnut@gentoo.org> gnome-media-2.22.0.ebuild:
+  Added ~ppc wrt bug 218794
 
   27 May 2008; Jeroen Roovers <jer@gentoo.org> gnome-media-2.22.0.ebuild:
   Marked ~hppa (bug #218794).
